traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:6: error: missing argument list for method posFinale in class TraversalByColumn
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `posFinale _` or `posFinale(_,_)` instead of `posFinale`.
      if(posFinale){
         ^TraversalByColumn:16: error: type mismatch;
 found   : Unit
 required: Boolean
  if(getX() == getMondeLargeur() && getY()== getMondeHauteur()){
  ^